solve overflow text problem by making spans act like block elements

--- a/assets/css/blockchain.css.scss
+++ b/assets/css/blockchain.css.scss
@@ -47,6 +47,9 @@ html,body {
 
 .hide { display: none; }
 
+//Because <span>'s are evil
+.display-block { display: block; }
+
 .alpha-agreement {
   background: rgba(10,10,10,.5);
   position: fixed;
